WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25384
Fix a compile breakage in V8 bindings for V8DOMWindowCustom.cpp
https://bugs.webkit.org/show_bug.cgi?id=25384
Summary
Fix a compile breakage in V8 bindings for V8DOMWindowCustom.cpp
Eric Roman
Reported
2009-04-24 16:12:32 PDT
This follows the refactor in <
http://trac.webkit.org/changeset/42446
> where some methods moved from Document to Window. Need to update accordingly.
Attachments
Rename method to fix compile breakage
(1.54 KB, patch)
2009-04-24 16:19 PDT
,
Eric Roman
fishd
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Roman
Comment 1
2009-04-24 16:19:14 PDT
Created
attachment 29776
[details]
Rename method to fix compile breakage
Dimitri Glazkov (Google)
Comment 2
2009-04-27 20:40:03 PDT
Landed as
http://trac.webkit.org/changeset/42919
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug