2009-04-27  Eric Roman  <eroman@chromium.org>

Reviewed by Darin Fisher.

        Fix a compile breakage.
        <https://bugs.webkit.org/show_bug.cgi?id=25384>

        * bindings/v8/custom/V8DOMWindowCustom.cpp:
        (WebCore::CALLBACK_FUNC_DECL):

git-svn-id: svn://svn.chromium.org/blink/trunk@42919 bbb929c8-8fbe-4397-9dbb-9b2b20218538